# TRVD_2026_404-TN_Kovaliov_Labs

./: .dockerignore  .gitignore  COMMERCIAL_LICENSE.md  Dockerfile.prod  LICENSE  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  pyproject.toml
backend/Docs/: backend.md
backend/alembic/: env.py
backend/alembic/versions/: 20260322_0001_initial_schema.py  20260323_0002_membership_plans.py  20260324_0003_subscription_audit.py  20260324_0004_subscription_restore_and_plan_visibility.py  20260324_0005_workout_class_pricing.py  20260324_0006_payment_booking_checkout.py  20260325_0007_workout_class_completion.py  20260328_0008_schedule_series.py  20260328_0009_drop_legacy_prisma_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  docs.py  (+1 more)
backend/scripts/: start-api.sh  start-beat.sh  start-worker.sh
backend/tests/: conftest.py  test_api_route_units.py  test_auth_service_integration.py  test_booking_service_integration.py  test_celery_app.py  test_frontend_runtime.py  test_health.py  test_infra_helpers.py  test_notification_service.py  test_openapi_docs.py  test_payment_service_integration.py  test_public_service_integration.py  test_report_service_integration.py  test_runtime_scripts.py  test_schedule_recurrence.py  test_schedule_schemas.py  test_schedule_service_helpers.py  test_schedule_service_integration.py  test_schedule_service_recurring.py  test_security.py  test_subscription_service_integration.py  test_user_service_integration.py  test_workout_series_repository.py
(+185 files in other folders)
